[gd_scene load_steps=15 format=3 uid="uid://befoxrscuwgm5"]

[ext_resource type="Script" path="res://Scripts/Interface/UIe_ActorTrackTag.gd" id="1_aoqnv"]
[ext_resource type="Shader" uid="uid://d0qtqybkpfdye" path="res://Resource/Native Resource/Materials/Shaders/vs_ColorSiluette.tres" id="2_51do4"]
[ext_resource type="Material" uid="uid://cx26t2ua8a33n" path="res://Resource/Native Resource/Materials/Canvas/mat_CanvasAdd.tres" id="2_ti8gs"]
[ext_resource type="Texture2D" uid="uid://dn15f42yo3l1g" path="res://Assets/Effects/VFX/VFX_Ring0.png" id="3_ahope"]
[ext_resource type="FontFile" uid="uid://cppvbwhxpcp01" path="res://Resource/Native Resource/Fonts/Base/Urbanist/Urbanist-BoldItalic.ttf" id="4_0joji"]
[ext_resource type="Texture2D" uid="uid://b30gt0477iv5x" path="res://Assets/Interface/TrackTags/CharacterTag4_back.png" id="5_qpe0p"]
[ext_resource type="Texture2D" uid="uid://c7aaev3wd4hdg" path="res://Assets/Interface/TrackTags/CharacterTag4_border.png" id="6_ihvqp"]

[sub_resource type="Gradient" id="Gradient_caco1"]
colors = PackedColorArray(1, 1, 1, 1, 0.0244755, 0.0244755, 0.0244755, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ehkk8"]
gradient = SubResource("Gradient_caco1")

[sub_resource type="Curve" id="Curve_rvur4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_74lcr"]
curve = SubResource("Curve_rvur4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_aelyn"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
scale_max = 0.6
scale_curve = SubResource("CurveTexture_74lcr")
color_ramp = SubResource("GradientTexture1D_ehkk8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uklnh"]
resource_local_to_scene = true
shader = ExtResource("2_51do4")
shader_parameter/ColorModulate = Color(1, 1, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_f6vaj"]
font = ExtResource("4_0joji")
font_size = 24
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.392157)

[node name="ActorTag" type="Node2D"]
script = ExtResource("1_aoqnv")
sideset_alliedcolor = Color(0, 0.243137, 0.364706, 1)
sideset_enemycolor = Color(0.321569, 0, 0, 1)

[node name="Wave" type="GPUParticles2D" parent="."]
material = ExtResource("2_ti8gs")
position = Vector2(-80, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_aelyn")
texture = ExtResource("3_ahope")
lifetime = 0.3
one_shot = true

[node name="Back" type="TextureRect" parent="."]
self_modulate = Color(0.321569, 0, 0, 1)
material = SubResource("ShaderMaterial_uklnh")
offset_left = -47.0
offset_top = -22.0
offset_right = 47.0
offset_bottom = 22.0
pivot_offset = Vector2(47, 22)
texture = ExtResource("5_qpe0p")
expand_mode = 1
stretch_mode = 4

[node name="CharacterIcon" type="TextureRect" parent="Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 4

[node name="Border" type="TextureRect" parent="Back"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_ihvqp")
expand_mode = 1
stretch_mode = 4

[node name="CharacterIndex" type="Label" parent="."]
offset_top = -1.0
offset_right = 39.0
offset_bottom = 31.0
text = "a"
label_settings = SubResource("LabelSettings_f6vaj")
horizontal_alignment = 2
